--- a/roles/app/handlers/main.yml
+++ b/roles/app/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Reiniciar httpd
+- name: Reload nginx
   ansible.builtin.service:
-    name: httpd
-    state: restarted
+    name: nginx
+    state: reloaded
   become: true
