--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -3,7 +3,7 @@
 aws_region: us-east-1
 aws_profile: default  # Ajuste caso use outro profile no arquivo aws_credentials
 project_name: ansible-startup-lab
-environment: production
+deployment_environment: production
 
 # Configuração de rede
 create_vpc: true
@@ -60,7 +60,7 @@ scale_policy_name: ansible-startup-scale-policy
 # Tags padrão aplicadas a todos os recursos criados
 common_tags:
   Project: "{{ project_name }}"
-  Environment: "{{ environment }}"
+  Environment: "{{ deployment_environment }}"
 
 # Caminho para a chave pública local usada no EC2 (opcional)
 # ec2_public_key_path: files/id_rsa.pub
