--- a/roles/provision_infra/defaults/main.yml
+++ b/roles/provision_infra/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 # Provide safe defaults so the role keeps working even when inventory vars are missing.
 project_name: ansible-startup-lab
-environment: production
+deployment_environment: production
 aws_region: us-east-1
 aws_profile: default
 
@@ -27,14 +27,15 @@ private_subnet_ids: []
 
 common_tags:
   Project: "{{ project_name }}"
-  Environment: "{{ environment }}"
+  Environment: "{{ deployment_environment }}"
 
 ec2_key_name: ansible-startup-key
 ec2_instance_type: t3.micro
 ec2_ami_id: ami-0c02fb55956c7d316
 ec2_root_volume_size: 16
 
-ec2_public_key_path: null
+# CIDR permitido para SSH na instância web; ajuste para restringir o acesso.
+ssh_ingress_cidr: 0.0.0.0/0
 
 rds_instance_identifier: ansible-startup-db
 rds_engine: mysql
