Updated even more

--- a/playbooks/configure_web.yml
+++ b/playbooks/configure_web.yml
@@ -4,6 +4,8 @@
   become: true
   collections:
     - amazon.aws
+  vars_files:
+    - ../group_vars/all.yml
   environment:
     AWS_SHARED_CREDENTIALS_FILE: "{{ playbook_dir }}/../aws_credentials"
   module_defaults:
