--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,11 +1,12 @@
 [defaults]
-inventory = inventories/aws_ec2.yml
+inventory = inventories/aws_ec2.yml,artifacts/provisioned_inventory.yml
 roles_path = roles
 collections_path = ./collections
 host_key_checking = False
 retry_files_enabled = False
 stdout_callback = yaml
 interpreter_python = auto_silent
+private_key_file = artifacts/ansible-startup-key.pem
 
 [inventory]
 enable_plugins = aws_ec2, host_list, script, yaml, ini
