--- a/inventories/aws_ec2.yml
+++ b/inventories/aws_ec2.yml
@@ -15,5 +15,8 @@ hostnames:
   - public-ip-address
 compose:
   ansible_host: public_ip_address | default(private_ip_address)
+  ansible_user: 'ec2-user'
+  ansible_python_interpreter: /usr/bin/python3
+  ansible_pkg_mgr: yum
   private_ip: private_ip_address
   instance_id: instance_id
