--- a/roles/web/tasks/main.yml
+++ b/roles/web/tasks/main.yml
@@ -1,9 +1,24 @@
 ---
+- name: Verificar se o Nginx já está instalado
+  ansible.builtin.command: rpm -q nginx
+  register: nginx_query
+  failed_when: false
+  changed_when: false
+
+- name: Habilitar repositório nginx1 quando necessário
+  ansible.builtin.command: sudo amazon-linux-extras enable nginx1
+  when: nginx_query.rc != 0
+  changed_when: true
+
+- name: Atualizar metadados do yum após habilitar nginx1
+  ansible.builtin.command: sudo yum clean metadata
+  when: nginx_query.rc != 0
+  changed_when: false
+
 - name: Instalar Nginx
-  ansible.builtin.package:
-    name: nginx
-    state: present
-  become: true
+  ansible.builtin.command: sudo yum install -y nginx
+  when: nginx_query.rc != 0
+  changed_when: true
 
 - name: Garantir diretório do site
   ansible.builtin.file:
